# ufaya

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: ARCHITECTURE.md  JUNIPER_HIT_COUNTS.md
schemas/: firewall_rules.v3.schema.json  nat_rules.v2.schema.json
src/ufaya/: __init__.py  export.py
src/ufaya/drivers/: __init__.py  cisco.py  fortinet.py  juniper_srx.py  paloalto.py
src/ufaya/firewall/: __init__.py  base.py
src/ufaya/models/: __init__.py  firewall_rule.py  nat_rule.py
src/ufaya/routers/: __init__.py
src/ufaya/services/: __init__.py  device_factory.py
src/ufaya/utils/: __init__.py
tests/: _export_helpers.py  _snapshot.py  test_drivers.py  test_export_schema.py  test_export_snapshots.py  test_factory.py  test_juniper_srx.py  test_juniper_srx_nat.py  test_models.py  test_nat_models.py
tests/fixtures/: juniper_actions.xml  juniper_full.xml  juniper_global_addressbook.xml  juniper_inactive.xml  juniper_log_actions.xml  juniper_nat.xml  juniper_nat_real_tags.xml  juniper_nat_resolved.xml  juniper_priority_order.xml  juniper_recursive_sets.xml  juniper_rpc_reply.xml  juniper_service_details.xml  juniper_unresolved.xml
tests/snapshots/nat/: juniper_actions.minimal.json  juniper_log_actions.enriched.json  juniper_nat.debug.json  juniper_nat.enriched.json  juniper_nat.minimal.json  juniper_nat_real_tags.debug.json  juniper_nat_real_tags.enriched.json  juniper_nat_real_tags.minimal.json  juniper_nat_resolved.debug.json  juniper_nat_resolved.enriched.json  juniper_nat_resolved.minimal.json  juniper_service_details.debug.json
tests/snapshots/rules/: juniper_actions.debug.json  juniper_actions.enriched.json  juniper_actions.minimal.json  juniper_full.debug.json  juniper_full.enriched.json  juniper_full.minimal.json  juniper_global_addressbook.debug.json  juniper_global_addressbook.enriched.json  juniper_global_addressbook.minimal.json  juniper_inactive.debug.json  juniper_inactive.enriched.json  juniper_inactive.minimal.json  juniper_log_actions.debug.json  juniper_log_actions.enriched.json  juniper_log_actions.minimal.json  juniper_nat_real_tags.debug.json  juniper_nat_real_tags.minimal.json  juniper_nat_resolved.enriched.json  juniper_priority_order.debug.json  juniper_priority_order.enriched.json  juniper_priority_order.minimal.json  (+12 more)
(+4 files in other folders)
